fixed mobile spacing for search results

--- a/app/static_src/less/partials/nav.less
+++ b/app/static_src/less/partials/nav.less
@@ -275,11 +275,12 @@
         color: #9197a3;
     }
     img {
-        width: 25px;
+        width: 42px;
         margin-right: 10px;
     }
     span {
         font-size: 14px;
+        line-height: 36px;
     }
 }
 
@@ -745,7 +746,7 @@ span.deleteicon i {
     position: absolute;
     width: 30px;
     height: 100%;
-    right: 6px;
+    right: -6px;
     top: -2px;
 }
 span.deleteicon input {
